tests/baselines/reference/funClodule.errors.txt
tests/cases/compiler/funClodule.ts(15,10): error TS2300: Duplicate identifier 'foo3'.
tests/cases/compiler/funClodule.ts(16,8): error TS2300: Duplicate identifier 'foo3'.
tests/cases/compiler/funClodule.ts(19,7): error TS2300: Duplicate identifier 'foo3'.


==== tests/cases/compiler/funClodule.ts (3 errors) ====
    declare function foo();
    declare module foo {
        export function x(): any;
    }
    declare class foo { } // Should error
    
    
    declare class foo2 { }
    declare module foo2 {
        export function x(): any;
    }
    declare function foo2(); // Should error
    
    
    function foo3() { }
             ~~~~
!!! error TS2300: Duplicate identifier 'foo3'.
!!! related TS6203 tests/cases/compiler/funClodule.ts:16:8: 'foo3' was also declared here.
!!! related TS6204 tests/cases/compiler/funClodule.ts:19:7: and here.
    module foo3 {
           ~~~~
!!! error TS2300: Duplicate identifier 'foo3'.
!!! related TS6203 tests/cases/compiler/funClodule.ts:15:10: 'foo3' was also declared here.
!!! related TS6204 tests/cases/compiler/funClodule.ts:19:7: and here.
         export function x(): any { }
    }
    class foo3 { } // Should error
          ~~~~
!!! error TS2300: Duplicate identifier 'foo3'.
!!! related TS6203 tests/cases/compiler/funClodule.ts:15:10: 'foo3' was also declared here.
!!! related TS6204 tests/cases/compiler/funClodule.ts:16:8: and here.